# eigen-quadprog

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  _config.yml  conanfile.py
.github/workflows/: build.yml  conan.yml  eigen-quadprog.recipe  package.yml
.github/workflows/sources/: package.yml
binding/python/: CMakeLists.txt  setup.in.py
binding/python/eigen_quadprog/: __init__.py  c_eigen_quadprog.pxd  eigen_quadprog.pxd  eigen_quadprog.pyx  private_typedefs.h
binding/python/tests/: test_qp.py
conan/: CMakeLists.txt
conan/test_package/: conanfile.py  example.cpp
debian/: changelog  control  copyright  libeigen-quadprog-dev.install  libeigen-quadprog-doc.doc-base  libeigen-quadprog-doc.lintian-overrides  libeigen-quadprog1.install  source.lintian-overrides
doc/: Doxyfile.extra.in
doxygen/HEAD/: QuadProg_8h.html  QuadProg_8h.js  QuadProg_8h__incl.dot  QuadProg_8h__incl.md5  QuadProg_8h_source.html  a00008.html  a00008.js  a00011.html  a00011.js  a00015.html  a00015.js  a00560.html  a00563.html  a00563.js  a00564.html  a00567.html  a00567.js  a00568.html  a00571.html  a00571.js  annotated.html  annotated_dup.js  classEigen_1_1QuadProgCommon-members.html  classEigen_1_1QuadProgCommon.html  classEigen_1_1QuadProgCommon.js  classEigen_1_1QuadProgCommon__inherit__graph.dot  classEigen_1_1QuadProgCommon__inherit__graph.md5  classEigen_1_1QuadProgDense-members.html  classEigen_1_1QuadProgDense.html  classEigen_1_1QuadProgDense.js  classEigen_1_1QuadProgDense__coll__graph.dot  classEigen_1_1QuadProgDense__coll__graph.md5  classEigen_1_1QuadProgDense__inherit__graph.dot  classEigen_1_1QuadProgDense__inherit__graph.md5  classEigen_1_1QuadProgSparse-members.html  classEigen_1_1QuadProgSparse.html  classEigen_1_1QuadProgSparse.js  classEigen_1_1QuadProgSparse__coll__graph.dot  classEigen_1_1QuadProgSparse__coll__graph.md5  classEigen_1_1QuadProgSparse__inherit__graph.dot  (+33 more)
doxygen/HEAD/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
src/: CMakeLists.txt  QuadProg.cpp  QuadProg.h  eigen_quadprog_api.h  find_eigen_quadprog_f2c.cmake
src/BLAS/c/: blas.c
src/BLAS/f/: blas.f
src/QuadProg/c/: solve.QP.c  solve.QP.compact.c  util.c
src/QuadProg/f/: solve.QP.compact.f  solve.QP.f
src/eigen-quadprog/: eigen_quadprog_api.h
src/quadprog_fortran/: CMakeLists.txt
src/win_fortran/: CMakeLists.txt
tests/: CMakeLists.txt  QPTest.cpp
